--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 			<h1>Header</h1>
 		</header>
 			<section id="content">
-				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde">
+				<canvas id="AsteroidsGame" data-processing-sources="asteroids.pde Floater.pde Spaceship.pde Star.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    [INSERT CONTROLS KENNETH!!!]
 	    </footer>
 	</body>
 </html>
