--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 		<title>Title</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
-		<script src="Processing.exe"></script>
+		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
 			<h1>Header</h1>
 		</header>
 			<section id="content">
-				<canvas id="AsteroidsGame" data-processing-sources="asteroids.pde Floater.pde Spaceship.pde Star.pde">
+				<canvas id="asteroids" data-processing-sources="asteroids.pde Floater.pde Spaceship.pde Star.pde">
 				</canvas>
 		    </section>
 	    <footer>
