--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>Asteroids</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>3D Asteroids!!!</h1>
 		</header>
 			<section id="content">
 				<canvas id="asteroids" data-processing-sources="asteroids.pde Floater.pde Spaceship.pde Star.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    [INSERT CONTROLS KENNETH!!!]
+		    Controls /n
+			W - Accelerate    S - Decelerate /n
+			A - Turn Counterclockwise    D - Turn Clockwise /n
+			Q - Rotate Vertically Left    E - Rotate Vertically Right
 	    </footer>
 	</body>
 </html>
