--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		    </section>
 	    <footer>
 		    Controls /n
-			W - Accelerate    S - Decelerate /n
-			A - Turn Counterclockwise    D - Turn Clockwise /n
+			W - Accelerate    S - Decelerate </n>
+			A - Turn Counterclockwise    D - Turn Clockwise </n>
 			Q - Rotate Vertically Left    E - Rotate Vertically Right
 	    </footer>
 	</body>
