--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Controls /n
-			W - Accelerate    S - Decelerate </n>
-			A - Turn Counterclockwise    D - Turn Clockwise </n>
+		    Controls \n
+			W - Accelerate    S - Decelerate \n
+			A - Turn Counterclockwise    D - Turn Clockwise \n
 			Q - Rotate Vertically Left    E - Rotate Vertically Right
 	    </footer>
 	</body>
