--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Controls \n
-			W - Accelerate    S - Decelerate \n
-			A - Turn Counterclockwise    D - Turn Clockwise \n
+		    Controls <br>
+			W - Accelerate    S - Decelerate <br>
+			A - Turn Counterclockwise    D - Turn Clockwise <br>
 			Q - Rotate Vertically Left    E - Rotate Vertically Right
 	    </footer>
 	</body>
