--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 		    Controls <br>
 			W - Accelerate    S - Decelerate <br>
 			A - Turn Counterclockwise    D - Turn Clockwise <br>
-			Q - Rotate Vertically Left    E - Rotate Vertically Right
+			Q - Rotate Vertically Left    E - Rotate Vertically Right <br>
+			H - Hyperspace
 	    </footer>
 	</body>
 </html>
