--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		    </section>
 	    <footer>
 		    Controls <br>
-			W - Accelerate    S - Decelerate <br>
-			A - Turn Counterclockwise    D - Turn Clockwise <br>
-			Q - Rotate Vertically Left    E - Rotate Vertically Right <br>
+			W - Accelerate<br>    S - Decelerate <br>
+			A - Turn Counterclockwise<br>    D - Turn Clockwise <br>
+			Q - Rotate Vertically Left<br>    E - Rotate Vertically Right <br>
 			H - Hyperspace
 	    </footer>
 	</body>
