--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>3D Asteroids!!!</h1>
 		</header>
 			<section id="content">
-				<canvas id="asteroids" data-processing-sources="asteroids.pde Floater.pde Spaceship.pde Star.pde">
+				<canvas id="asteroids" data-processing-sources="asteroids.pde Floater.pde Spaceship.pde Star.pde Asteroid.pde">
 				</canvas>
 		    </section>
 	    <footer>
