--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>3D Asteroids!!!</h1>
+			<h1>3D Asteroids!!! (after the addition of asteroids... it's gotten quite slow)</h1>
 		</header>
 			<section id="content">
 				<canvas id="asteroids" data-processing-sources="asteroids.pde Floater.pde Spaceship.pde Star.pde Asteroid.pde">
@@ -19,7 +19,8 @@
 			W - Accelerate<br>    S - Decelerate <br>
 			A - Turn Counterclockwise<br>    D - Turn Clockwise <br>
 			Q - Rotate Vertically Left<br>    E - Rotate Vertically Right <br>
-			H - Hyperspace
+			H - Hyperspace <br>
+			Kenneth Cheung - AP CSA Blk 2 - '25-'26
 	    </footer>
 	</body>
 </html>
