Simplify header title in index.html
Removed the additional comment about performance in the header.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>3D Asteroids!!! (after the addition of asteroids... it's gotten quite slow)</h1>
+			<h1>3D Asteroids!!!</h1>
 		</header>
 			<section id="content">
 				<canvas id="asteroids" data-processing-sources="asteroids.pde Floater.pde Spaceship.pde Star.pde Asteroid.pde">
