--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 		    </section>
 	    <footer>
 		    Controls <br>
-			W - Accelerate     S - Decelerate <br>
-			A - Turn Counterclockwise     D - Turn Clockwise <br>
-			Q - Rotate Vertically Left     E - Rotate Vertically Right <br>
-			H - Hyperspace     SPACE - Shoot Bullets <br>
-			Move your Mouse to look around a little! <br>
+			W - Accelerate<br>S - Decelerate<br>
+			A - Turn Counterclockwise<br>D - Turn Clockwise<br>
+			Q - Rotate Vertically Left<br>E - Rotate Vertically Right<br>
+			H - Hyperspace<br>SPACE - Shoot Bullets<br><br>
+			Move your Mouse to look around a little! <br><br>
 			Kenneth Cheung - AP CSA Blk 2 - '25-'26
 	    </footer>
 	</body>
